--- a/Skeleton/Api/Presentation/Coordination/actions/custom.php.twig
+++ b/Skeleton/Api/Presentation/Coordination/actions/custom.php.twig
@@ -5,7 +5,7 @@
      * <code>
      * </code>
      */
-    public function {{ action.action }}Action()
+    public function {{ action }}Action()
     {
 
     }
