--- a/Skeleton/Api/Presentation/Coordination/actions/delete.php.twig
+++ b/Skeleton/Api/Presentation/Coordination/actions/delete.php.twig
@@ -1,7 +1,7 @@
     /**
      * @return Response
      */
-    public function {{ action.action }}Action()
+    public function {{ action }}Action()
     {
         $adapter = new DeleteCommandAdapter();
         $command = $adapter->createCommandFromRequest(new DeleteRequest($this->request, $this->resolver));
