--- a/Skeleton/Api/Presentation/Request/GetAllRequest.php.twig
+++ b/Skeleton/Api/Presentation/Request/GetAllRequest.php.twig
@@ -10,7 +10,7 @@ use Sfynx\DddBundle\Layer\Presentation\Request\Generalisation\AbstractAllRequest
  *
  * @category   {{ projectName }}
  * @package    Presentation
- * @subpackage Request
+ * @subpackage Request\{{ entityName }}\Query
  */
 class GetAllRequest extends AbstractAllRequest implements QueryRequestInterface
 {
