--- a/Skeleton/Api/Presentation/Request/GetByIdsRequest.php.twig
+++ b/Skeleton/Api/Presentation/Request/GetByIdsRequest.php.twig
@@ -10,7 +10,7 @@ use Sfynx\DddBundle\Layer\Presentation\Request\Generalisation\AbstractGetByIdsRe
  *
  * @category   {{ projectName }}
  * @package    Presentation
- * @subpackage Request
+ * @subpackage Request\{{ entityName }}\Query
  */
 class GetByIdsRequest extends AbstractGetByIdsRequest implements QueryRequestInterface
 {
