--- a/Skeleton/Api/Presentation/Request/SearchByRequest.php.twig
+++ b/Skeleton/Api/Presentation/Request/SearchByRequest.php.twig
@@ -10,7 +10,7 @@ use Sfynx\DddBundle\Layer\Presentation\Request\Generalisation\AbstractRequest;
  *
  * @category   {{ projectName }}
  * @package    Presentation
- * @subpackage Request
+ * @subpackage Request\{{ entityName }}\Query
  */
 class SearchByRequest extends AbstractRequest implements QueryRequestInterface
 {
