--- a/Skeleton/Api/Presentation/Coordination/actions/get.php.twig
+++ b/Skeleton/Api/Presentation/Coordination/actions/get.php.twig
@@ -3,7 +3,7 @@
      *
      * @example http://host/api/v1/actor.json/a299fc78-6548-45a3-9823-898c07f76c9b
      */
-    public function {{ action.action }}Action()
+    public function {{ action }}Action()
     {
         $adapter = new GetQueryAdapter();
         $query = $adapter->createQueryFromRequest(new GetRequest($this->request, $this->resolver));
