--- a/Skeleton/Api/Presentation/Coordination/actions/update.php.twig
+++ b/Skeleton/Api/Presentation/Coordination/actions/update.php.twig
@@ -5,7 +5,7 @@
      * <code>
      * </code>
      */
-    public function {{ action.action }}Action()
+    public function {{ action }}Action()
     {
         $adapter = new UpdateCommandAdapter();
         $command = $adapter->createCommandFromRequest(new UpdateRequest($this->request, $this->resolver));
