--- a/Skeleton/Api/Presentation/Request/DeleteManyRequest.php.twig
+++ b/Skeleton/Api/Presentation/Request/DeleteManyRequest.php.twig
@@ -10,7 +10,7 @@ use Sfynx\DddBundle\Layer\Presentation\Request\Generalisation\CommandRequestInte
  *
  * @category   {{ projectName }}
  * @package    Presentation
- * @subpackage Request
+ * @subpackage Request\{{ entityName }}\Command
  */
 class DeleteManyRequest extends AbstractDeleteManyRequest implements CommandRequestInterface
 {
