--- a/Skeleton/Api/Presentation/Request/GetRequest.php.twig
+++ b/Skeleton/Api/Presentation/Request/GetRequest.php.twig
@@ -10,7 +10,7 @@ use Sfynx\DddBundle\Layer\Presentation\Request\Generalisation\AbstractOneRequest
  *
  * @category   {{ projectName }}
  * @package    Presentation
- * @subpackage Request
+ * @subpackage Request\{{ entityName }}\Query
  */
 class GetRequest extends AbstractOneRequest implements QueryRequestInterface
 {
