--- a/Skeleton/Api/Presentation/Request/NewRequest.php.twig
+++ b/Skeleton/Api/Presentation/Request/NewRequest.php.twig
@@ -10,7 +10,7 @@ use Sfynx\DddBundle\Layer\Presentation\Request\Generalisation\AbstractRequest;
  *
  * @category   {{ projectName }}
  * @package    Presentation
- * @subpackage Request
+ * @subpackage Request\{{ entityName }}\Command
  */
 class NewRequest extends AbstractRequest implements CommandRequestInterface
 {
