--- a/Skeleton/Api/Infrastructure/Persistence/Orm/Repository.php.twig
+++ b/Skeleton/Api/Infrastructure/Persistence/Orm/Repository.php.twig
@@ -2,18 +2,19 @@
 
 namespace {{ projectName }}\Infrastructure\Persistence\Repository\{{ entityName }}\CouchDb;
 
+use Sfynx\DddBundle\Layer\Infrastructure\Persistence\Generalisation\CouchDb\AbstractOneRepository;
 use {{ projectName }}\Domain\Repository\{{ entityName }}RepositoryInterface;
-use  Sfynx\DddBundle\Layer\Infrastructure\Persistence\Generalisation\CouchDb\AbstractGetByIdsRepository;
 use {{ projectName }}\Infrastructure\Persistence\Repository\{{ entityName }}\TraitEntityName;
+use stdClass;
 
 /**
- * Class GetByIdsRepository
+ * Class {{ actionName }}Repository
  *
  * @category   {{ projectName }}
  * @package    Infrastructure
  * @subpackage Repository
  */
-class GetByIdsRepository extends AbstractGetByIdsRepository implements {{ entityName }}RepositoryInterface
+class {{ actionName }}Repository extends AbstractOneRepository implements {{ entityName }}RepositoryInterface
 {
     use TraitEntityName;
 }
