--- a/Skeleton/Api/Infrastructure/Persistence/Odm/Repository.php.twig
+++ b/Skeleton/Api/Infrastructure/Persistence/Odm/Repository.php.twig
@@ -1,6 +1,6 @@
 <?php
 
-namespace {{ projectName }}\Infrastructure\Persistence\Repository\{{ entityName }}\CouchDb;
+namespace {{ projectName }}\Infrastructure\Persistence\Repository\{{ entityName }}\Odm;
 
 use Sfynx\DddBundle\Layer\Infrastructure\Persistence\Generalisation\CouchDb\AbstractOneRepository;
 use {{ projectName }}\Domain\Repository\{{ entityName }}RepositoryInterface;
