--- a/Skeleton/Api/Tests/Application/Entity/Command/Handler/Decorator/NewCommandHandlerDecoratorTest.php.twig
+++ b/Skeleton/Api/Tests/Application/Entity/Command/Handler/Decorator/NewCommandHandlerDecoratorTest.php.twig
@@ -2,12 +2,12 @@
 
 namespace Tests\Application\{{ entityName }}\Command\Handler\Decorator;
 
-use DemoCountry\Application\{{ entityName }}\Command\Validation\SpecHandler\NewCommandSpecHandler;
+use {{ projectName }}\Application\{{ entityName }}\Command\Validation\SpecHandler\NewCommandSpecHandler;
 use Sfynx\DddBundle\Layer\Application\Generalisation\Interfaces\CommandHandlerInterface;
-use DemoCountry\Application\{{ entityName }}\Command\Handler\NewCommandHandler;
-use DemoCountry\Application\{{ entityName }}\Command\NewCommand;
-use DemoCountry\Application\{{ entityName }}\Command\Handler\Decorator\NewCommandHandlerDecorator;
-use DemoCountry\Application\{{ entityName }}\Command\Validation\ValidationHandler\NewCommandValidationHandler;
+use {{ projectName }}\Application\{{ entityName }}\Command\Handler\NewCommandHandler;
+use {{ projectName }}\Application\{{ entityName }}\Command\NewCommand;
+use {{ projectName }}\Application\{{ entityName }}\Command\Handler\Decorator\NewCommandHandlerDecorator;
+use {{ projectName }}\Application\{{ entityName }}\Command\Validation\ValidationHandler\NewCommandValidationHandler;
 use \Phake;
 
 
