--- a/Skeleton/Api/Tests/Application/Entity/Command/UpdateCommandTest.php.twig
+++ b/Skeleton/Api/Tests/Application/Entity/Command/UpdateCommandTest.php.twig
@@ -1,8 +1,8 @@
 <?php
 
-namespace  Tests\Application\Country\Command\Command;
+namespace  Tests\Application\{{ entityName }}\Command\Command;
 
-use DemoCountry\Application\Country\Command\UpdateCommand;
+use {{ projectName }}\Application\{{ entityName }}\Command\UpdateCommand;
 use Sfynx\DddBundle\Layer\Application\Generalisation\Interfaces\CommandInterface;
 
 class UpdateCommandTest extends \PHPUnit_Framework_TestCase
