--- a/Skeleton/Api/Tests/Application/Entity/Command/Handler/NewCommandHandlerTest.php.twig
+++ b/Skeleton/Api/Tests/Application/Entity/Command/Handler/NewCommandHandlerTest.php.twig
@@ -1,11 +1,11 @@
 <?php
 
-namespace  Tests\Application\Country\Command\Handler;
+namespace  Tests\Application\{{ entityName }}\Command\Handler;
 
 use Sfynx\DddBundle\Layer\Application\Generalisation\Interfaces\CommandHandlerInterface;
-use DemoCountry\Application\Country\Command\Handler\NewCommandHandler;
-use DemoCountry\Application\Country\Command\NewCommand;
-use DemoCountry\Domain\Workflow\Country\Handler\NewWFHandler;
+use {{ projectName }}\Application\{{ entityName }}\Command\Handler\NewCommandHandler;
+use {{ projectName }}\Application\{{ entityName }}\Command\NewCommand;
+use {{ projectName }}\Domain\Workflow\{{ entityName }}\Handler\NewWFHandler;
 use \Phake;
 
 class NewCommandHandlerTest extends \PHPUnit_Framework_TestCase
@@ -30,7 +30,7 @@ class NewCommandHandlerTest extends \PHPUnit_Framework_TestCase
 
     public function testProcess()
     {
-        $entity = [["id"=>"123465","libelle"=>"France","reference"=>"0001","iso"=>"FR"]];
+        $entity = [["id"=>"123465"]];
         $this->workflowHandler->data->entity = $entity;
 
         $result = $this->commandHandler->process($this->command);
