--- a/Skeleton/Api/Tests/Application/Entity/Command/NewCommandTest.php.twig
+++ b/Skeleton/Api/Tests/Application/Entity/Command/NewCommandTest.php.twig
@@ -1,8 +1,8 @@
 <?php
 
-namespace  Tests\Application\Country\Command\Command;
+namespace  Tests\Application\{{ entityName }}\Command\Command;
 
-use DemoCountry\Application\Country\Command\NewCommand;
+use {{ projectName }}\Application\Country\Command\NewCommand;
 use Sfynx\DddBundle\Layer\Application\Generalisation\Interfaces\CommandInterface;
 
 class NewCommandTest extends \PHPUnit_Framework_TestCase
@@ -14,13 +14,12 @@ class NewCommandTest extends \PHPUnit_Framework_TestCase
 
     public function setUp()
     {
-        $this->libelle="FRANCe";
-        $this->indicatif="033";
-        $this->iso="FR";
-        $this->selectable=true;
-        $this->reference="001";
-
-        $this->command = new NewCommand($this->libelle,$this->indicatif,$this->iso,$this->selectable,$this->reference);
+{% set constructorArgs = "" %}
+{% for field in entityFields %}
+        $this->{{ field.name }}="123456";
+{% set constructorArgs = constructorArgs ~ "$this->" ~ field.name ~ "," %}
+{% endfor %}
+        $this->command = new NewCommand({{ constructorArgs|trim(",")}});
     }
 
     public function testInterface()
@@ -30,10 +29,10 @@ class NewCommandTest extends \PHPUnit_Framework_TestCase
 
     public function testGetters()
     {
-        $this->assertEquals($this->libelle, $this->command->getLibelle());
-        $this->assertEquals($this->indicatif, $this->command->getIndicatif());
-        $this->assertEquals($this->iso, $this->command->getIso());
-        $this->assertEquals($this->selectable, $this->command->getSelectable());
-        $this->assertEquals($this->reference, $this->command->getReference());
+{% for field in entityFields %}
+{% if field.type != "id" %}
+    $this->assertEquals($this->{{ field.name }}, $this->command->get{{ field.name|ucfirst }}());
+{% endif %}
+{% endfor %}
     }
 }
